mm: initial work [WIP]

--- a/kern/CMakeLists.txt
+++ b/kern/CMakeLists.txt
@@ -1,8 +1,10 @@
+add_subdirectory(arch/riscv64)
+
 add_library(
     pozos_kern
-        start.S
-
         init.c
+        mm.c
+        sched.c
         printf.c
         uart.c
         console.c
@@ -15,3 +17,5 @@ target_include_directories(
     pozos_kern
     PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include
 )
+
+target_link_libraries(pozos_kern pz_arch_riscv64)
